[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "easy-aso"
version = "0.1.0"
description = "Automated Supervisory Optimization (ASO) for BACnet systems"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }

authors = [
  { name = "Ben Bartling", email = "ben.bartling@gmail.com" },
]

dependencies = [
  "bacpypes3",
  "ifaddr",
]

classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.optional-dependencies]
test = ["pytest"]

[project.urls]
Homepage = "https://github.com/bbartling/easy-aso"
Repository = "https://github.com/bbartling/easy-aso"
Issues = "https://github.com/bbartling/easy-aso/issues"

[tool.setuptools.packages.find]
where = ["."]
