[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "easy-aso"
version = "0.1.5"
description = "Automated Supervisory Optimization (ASO) for BACnet building automation systems (BAS) and HVAC supervisory control"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
keywords = [
  "bacnet",
  "bas",
  "building-automation",
  "bacpypes3",
  "hvac",
  "supervisory-control",
  "energy",
  "asyncio",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Office/Business",
  "Topic :: System :: Monitoring",
  "Topic :: Scientific/Engineering :: Interface Engine/Protocol Translator",
]

authors = [
  { name = "Ben Bartling", email = "ben.bartling@gmail.com" },
]

dependencies = [
  "bacpypes3",
  "ifaddr",
  "rdflib>=7.0.0",
]

[project.optional-dependencies]
platform = [
  "fastapi",
  "uvicorn[standard]",
  "httpx",
  "asyncio-mqtt",
  "aiosqlite",
]
test = ["pytest", "pytest-asyncio"]
# Local development / CI (platform + test, no self-referential extras)
dev = [
  "pytest",
  "pytest-asyncio",
  "fastapi",
  "uvicorn[standard]",
  "httpx",
  "asyncio-mqtt",
  "aiosqlite",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[project.urls]
Homepage = "https://github.com/bbartling/easy-aso"
Repository = "https://github.com/bbartling/easy-aso"
Issues = "https://github.com/bbartling/easy-aso/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["easy_aso*"]
